# backend/src/api/schemas.ts
@@ -60,10 +60,6 @@ export const searchRequestSchema = {
       properties: {
         distanceRangeMeters: distanceRangeSchema,
         minimumChargingPoints: { type: "integer", enum: [2, 4, 6, 8, 10, 12, 16, 20] },
-        minimumAvailablePoints: {
-          type: ["integer", "null"],
-          enum: [null, 1, 2, 4, 6, 8, 10],
-        },
         minimumPowerKW: {
           type: "integer",
           enum: [11, 22, 50, 100, 150, 200, 250, 300, 350, 400],
